web-infras/parser/tests/fixtures/babel/es2022/class-private-names-duplicated/static-method-static-method/output.txt
[SyntaxError]: Duplicate private name. (3,10)
3|  static #x() {}
 |        ^
